--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --files --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --files --inspect=127.0.0.1:9230 --transpile-only --ignore-watch node_modules src/server.ts"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -13,10 +13,13 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "cpf-cnpj-validator": "^1.0.3",
+    "date-fns": "^2.23.0",
     "express": "^4.17.1",
     "node": "^16.5.0",
     "typeorm": "^0.2.34",
     "uuid": "^8.3.2",
-    "uuidv4": "^6.2.11"
+    "uuidv4": "^6.2.11",
+    "yup": "^0.32.9"
   }
 }
